--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
         <div class="col-md-10 main-content">
             <div id="page-content">
                 <div id="problems-page" class="p-4">
+                    <h2 class="mb-4"><a href="/download">👉Download submission.zip</a></h2>
                     <h2 class="mb-4">Problems</h2>
                     <h3 class="mb-4">Current Estimated Score: {{ overall_score }}</h3>
                     <div class="table-responsive">
