monospace for subm

--- a/templates/problem.html
+++ b/templates/problem.html
@@ -73,6 +73,9 @@
     background-color: rgb(147, 17, 49);
     color: white;
 }
+#submission {
+    font-family: monospace;
+}
         </style>
     </head>
     <body>
