--- a/templates/problem.html
+++ b/templates/problem.html
@@ -113,6 +113,11 @@
                                 Show Only Failed Tests
                             </label>
                         </div>
+                        <div>
+                            {% for hint in hints %}
+                                <div class="text-muted">{{ hint }}</div>
+                            {% endfor %}
+                        </div>
                         <div style="display: flex; justify-content: space-between; align-items: center;">
                             <button class=""nav-button prev" id="prevBtn" onclick="changeGrid(-1)">
                                 <i class="bi bi-arrow-left"></i>
