show summary in problem

--- a/templates/problem.html
+++ b/templates/problem.html
@@ -99,6 +99,8 @@
             <div id="page-content">
                 <div id="detail-page" class="p-4">
                     <h2 class="mb-4">{{ task }}</h2>
+                    <div>{{ summary }}</div>
+                    <div class="text-muted">Hardness: {{ hardness }}</div>
 
                     <div class="mb-4">
                         <div class="form-check">
