Shortestまとめから最短情報を取ってくる

--- a/templates/problem.html
+++ b/templates/problem.html
@@ -101,6 +101,7 @@
                     <h2 class="mb-4">{{ task }}</h2>
                     <div>{{ summary }}</div>
                     <div class="text-muted">Hardness: {{ hardness }}</div>
+                    <div class="text-muted">Shortest: {{ shortest }} bytes</div>
 
                     <div class="mb-4">
                         <div class="form-check">
