--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                                     <th>Task <a href="/?sort=name">▼</a></th>
                                     <th>Summary</th>
                                     <th>Hardness <a href="/?sort=hardness">▼</a></th>
-                                    <th>Shortest <a href="/?sort=shortest">▼</a></th>
+                                    <th>Shortest <a href="/?sort=global_shortest">▼</a></th>
                                     <th>Size</th>
                                     <th>Score <a href="/?sort=score">▼</a></th>
                                 </tr>
@@ -63,7 +63,7 @@
                                     </td>
                                     <td> {{ task.summary }} </td>
                                     <td> {{ task.hardness }} </td>
-                                    <td> {{ task.shortest }} bytes </td>
+                                    <td> {{ task.global_shortest }} bytes </td>
                                     <td>
                                         {% if task.exists %}
                                             {{ task.size }} bytes
@@ -94,7 +94,7 @@
             btnText.textContent = 'Syncing...';
             spinner.classList.remove('d-none');
             
-            fetch('/sync_shortest', {
+            fetch('/sync_global_shortest', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
