--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/">Problems</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/explorer">🎯 Explorer</a>
+                        </li>
                     </ul>
                 </div>
             </div>
