--- a/templates/problem.html
+++ b/templates/problem.html
@@ -90,6 +90,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/">Problems</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/explorer">🎯 Explorer</a>
+                        </li>
                     </ul>
                 </div>
             </div>
