--- a/templates/explorer.html
+++ b/templates/explorer.html
@@ -91,6 +91,9 @@
                     <li class="nav-item">
                         <a class="nav-link active-page" href="/explorer">🎯 Explorer</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/search">🔍 Search</a>
+                    </li>
                 </ul>
             </div>
         </div>
