--- a/templates/problem.html
+++ b/templates/problem.html
@@ -97,6 +97,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/explorer">🎯 Explorer</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/search">🔍 Search</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -179,7 +182,7 @@
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th>Comment</th>
+                                    <th>Comments</th>
                                 </tr>
                             </thead>
                             <tbody id="comment-list">
@@ -190,7 +193,8 @@
                         </table>
                     </div>
 
-                    <form class="mb-4" hx-post="/comment/{{ task }}" hx-target="#comment-list" hx-swap="beforeend" hx-on="htmx:afterRequest: this.reset()">
+                    <form class="mb-4" hx-post="/comment/{{ task }}" hx-target="#comment-list" hx-swap="beforeend"
+                        hx-on::after-request="if(event.detail.successful)this.reset()">
                         <textarea class="form-control" id="comment" name="comment" rows="3"></textarea>
                         <div class="d-flex">
                             <button class="btn btn-primary mt-2" type="submit">Add Comment</button>
