--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -1,3 +1,10 @@
 <tr>
     <td> {% autoescape false %} {{ comment.pp_text() }} {% endautoescape %} </td>
+    <td>
+        <button class="btn btn-outline-danger btn-comment-delete"
+            hx-delete="/comment/{{ task }}/{{comment.time}}"
+        >
+            🗑️
+        </button>
+    </td>
 </tr>
